--- a/Initiative Tracker/Main.html
+++ b/Initiative Tracker/Main.html
@@ -7,8 +7,20 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Menu Icon -->
+  <div id="menuToggle">
+    ☰
+  </div>
   <div class="container">
+  <!-- Hidden Buttons Panel -->
+  <div id="menuPanel" class="hidden">
+    <button id="btn1">Placeholder 1</button>
+    <button id="btn2">Placeholder 2</button>
+    <button id="changeTerrainBtn">Change Terrain</button>
+  </div>
+  
     <h1>D&D Initiative Tracker</h1>
+    <p id="currentTerrain">Terrain: Grassy Plains</p>
 
     <!--Click name in order to display details -->
     <div id="currentCharacterPanel" class="card hidden">
